samples/_failures_safe/1761363100_131ff5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee7063da.c: In function ‘main’:
./samples/SAFE/__tmp_ee7063da.c:146:9: error: expected declaration or statement at end of input
  146 |         printf("Addition not possible\n");
      |         ^~~~~~
./samples/SAFE/__tmp_ee7063da.c:146:9: error: expected declaration or statement at end of input
